--- a/interactive.html
+++ b/interactive.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="features8 cid-s6DFtG1gsR mbr-parallax-background" id="features8-30">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="features8 cid-s6DFtG1gsR mbr-parallax-background" id="features8-30">
 
     
 
@@ -119,7 +119,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-2">
                         Quizzes</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">We have developed an internet quiz system that is great for entertainment, education, and polls.&nbsp;<br><br>Here is an example of our interactive system in action.</p>
+                    <p class="mbr-text mbr-fonts-style display-7">We have developed an internet quiz system that is great for entertainment, education, and polls.&nbsp;<br>&nbsp; &nbsp;<br>Here is an example of our interactive system in action.</p>
                     <div class="mbr-section-btn text-center"><a href="https://courses.wavedm.net/worryIND.html" class="btn btn-danger-outline display-4" target="_blank">Quiz Example</a></div>
                 </div>
             </div>
