--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
+<section class="engine"><a href="https://mobirise.info/f">easy web creator</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
 
     
 
