--- a/fruityfeatures.html
+++ b/fruityfeatures.html
@@ -55,7 +55,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="features9 cid-rURwUshgw3" id="features9-1w">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="features9 cid-rURwUshgw3" id="features9-1w">
 
     
 
