--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html" aria-expanded="false">
                         HOME</a></li>
-                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-info display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
+                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-info display-4" href="https://mobirise.com" aria-expanded="true" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item text-info display-4" href="https://gamejolt.com/games/grocerycatcher/523501" aria-expanded="false" target="_blank">Grocery Catcher</a>
                         <a class="dropdown-item text-info display-4" href="fruity.html" aria-expanded="false">Fruity</a>
-                        <a class="dropdown-item text-info display-4" href="https://biz.borgcreative.com/ads.html" aria-expanded="false" target="_blank">Ads</a>
+                        <a class="dropdown-item text-info display-4" href="page12.html" aria-expanded="false">Marketing</a>
                     </div>
                 </li>
 
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="cid-rRQAquKE0v mbr-fullscreen mbr-parallax-background" id="header2-1p">
 
     
 
@@ -137,7 +137,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Host ads with us and reach new customers! Our platform respects privacy by not using cookings and we don't sell data.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://biz.borgcreative.com/ads.html" class="btn btn-primary display-4" target="_blank">Ads</a></div>
+                    <div class="mbr-section-btn text-center"><a href="page12.html" class="btn btn-primary display-4">Marketing</a></div>
                 </div>
             </div>
 
