--- a/bct/predAds0001.html
+++ b/bct/predAds0001.html
@@ -11,7 +11,7 @@
   <div class="alert" style="background-color: white;">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
   <p>
-    <center><a href="http://link.borgcreative.com/SQTTcJ" target="_blank"><img src="./cwjad.jpg" width="100%" alt=""></a></center>
+    <center><a href="https://kutt.it/cMt0dj" target="_blank"><img src="./cwjad.jpg" width="100%" alt=""></a></center>
 </p>
 </div>
 </div>
