--- a/bct/predAds0003.html
+++ b/bct/predAds0003.html
@@ -12,8 +12,8 @@
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
   <center class="pc_l" style="color: #cecece; -webkit-text-stroke: 1px black;">Grounds Tech Talk</center>
   <center class="pc_l" style="color: #cecece; -webkit-text-stroke: 1px black;">Here to provide you with a hot cup of tech news.</center>
-  <p style="text-align: center;"><a href="http://link.borgcreative.com/HQVSXq" target="_blank" rel="noreferrer"><button class="predAdButton1">Learn More</button></a></p>
-  <a href="https://dev.jacobborgprogramming.net/ads.html" rel="noreferrer"><img src="https://dev.jacobborgprogramming.net/PredatorAds/assets/foxicon.PNG" width="40mm"></a>
+  <p style="text-align: center;"><a href="https://kutt.it/OxNw53" target="_blank" rel="noreferrer"><button class="predAdButton1">Learn More</button></a></p>
+  <a href="https://kutt.it/OxNw53" rel="noreferrer"><img src="https://dev.jacobborgprogramming.net/PredatorAds/assets/foxicon.PNG" width="40mm"></a>
 </div>
 </div>
 <!--End-->
