--- a/bct/mk2-bar-1.html
+++ b/bct/mk2-bar-1.html
@@ -11,21 +11,21 @@
   <a target="_blank" href="https://kutt.it/cMt0dj">
     <img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog" width="20%" height="auto">
   </a>
-  <div class="desc">Let's chat about current issues over coffee.</div>
+  <div hidden class="desc">Let's chat about current issues over coffee.</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="https://kutt.it/wXTmup">
     <img src="wdm.png" alt="Wave Digital Ministries Network" width="20%" height="auto">
   </a>
-  <div class="desc">We are merging ministry & technology.</div>
+  <div hidden class="desc">We are merging ministry & technology.</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="https://kutt.it/AvTyTk">
     <img src="grocerycatcher1.png" alt="Grocery Catcher" width="20%" height="auto">
   </a>
-  <div class="desc">Catch the food with your cart and avoid the rapidly approaching boulders!</div>
+  <div hidden class="desc">Catch the food with your cart and avoid the rapidly approaching boulders!</div>
 </div>
 
 
