--- a/lenses.html
+++ b/lenses.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="header10 cid-saDe2pJIVy mbr-fullscreen mbr-parallax-background" id="header10-4e">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header10 cid-saDe2pJIVy mbr-fullscreen mbr-parallax-background" id="header10-4e">
 
     
 
@@ -170,7 +170,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=64fe7e75432d43e18bb37456b9ee43a5&metadata=01"><img src="assets/images/snapcodegc.png" alt="Mobirise" title=""></a>
+                        <a href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=64fe7e75432d43e18bb37456b9ee43a5&metadata=01" target="_blank"><img src="assets/images/snapcodegc.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -183,12 +183,12 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=dc96d99ebd4d4604bf780f3eeb5bba86&metadata=01" target="_blank"><img src="assets/images/snapcodepeppers.png" alt="Mobirise" title=""></a>
+                        <a href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=42549e4a52c145caa8bba86e3b1c2de6&metadata=01" target="_blank"><img src="assets/images/snapcode-1.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            GC Peppers</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">A custom lens we produced for our game Grocery Catcher (GC).</p>
+                            Twisted Faces</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">This custom lens is one of our most successful lenses! This lens has over 31,000 views.</p>
                     </div>
                 </div>
             </div>
