--- a/newstuff.html
+++ b/newstuff.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="cid-saUBo3nhai mbr-fullscreen mbr-parallax-background" id="header2-4r">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="cid-saUBo3nhai mbr-fullscreen mbr-parallax-background" id="header2-4r">
 
     
 
@@ -143,7 +143,7 @@
                     Grocery Catcher 0.1.3</h2>
                 
                 <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">
-                    Updates:<br>New icon<br>Added coconuts<br>And fixed a few bugs</p>
+                    Updates:<br>New icon<br>Added coconuts to fruit list<br>And fixed a few bugs</p>
                 <div class="mbr-section-btn align-left py-4"><a class="btn btn-danger display-4" href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank">LEARN MORE</a></div>
             </div>
         </div>
