--- a/newsletter.html
+++ b/newsletter.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-saY5Q8IhpM mbr-fullscreen mbr-parallax-background" id="header2-4w">
+<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="cid-saY5Q8IhpM mbr-fullscreen mbr-parallax-background" id="header2-4w">
 
     
 
@@ -110,8 +110,8 @@
 </section>
 
 <div id="custom-html-4x"><!-- Type valid HTML here -->
-
-<div>
+<center>
+<div width="70%">
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -155,7 +155,8 @@
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
-</div></div>
+</div>
+</center></div>
 
 <section once="footers" class="cid-rRxsbIgNmG" id="footer7-4v">
 
